@@ -1,4 +1,4 @@
-/* gtk+-2.0.vala generated by lt-vapigen, do not modify. */
+/* gtk+-2.0.vala generated by vapigen, do not modify. */
 
 [CCode (cprefix = "Gtk", lower_case_cprefix = "gtk_")]
 namespace Gtk {
@@ -5584,7 +5584,7 @@ namespace Gtk {
 		[NoArrayLength]
 		public static bool check_abi_check (int argc, string[] argv, int num_checks, ulong sizeof_GtkWindow, ulong sizeof_GtkBox);
 		[NoArrayLength]
-		public static bool with_args (int argc, string[] argv, string parameter_string, out GLib.OptionEntry entries, string translation_domain) throws GLib.Error;
+		public static bool with_args (int argc, string[] argv, string parameter_string, GLib.OptionEntry[] entries, string translation_domain) throws GLib.Error;
 	}
 	[CCode (cheader_filename = "gtk/gtk.h")]
 	public class Input {
