@@ -36,6 +36,7 @@ gtk_init_abi_check.argv is_array="1"
 gtk_init_check.argv is_array="1"
 gtk_init_check_abi_check.argv is_array="1"
 gtk_init_with_args.argv is_array="1"
+gtk_init_with_args.entries is_array="1"
 GtkItem::deselect has_emitter="1"
 GtkItem::select has_emitter="1"
 GtkItem::toggle has_emitter="1"
