@@ -1,3 +1,12 @@
+2007-09-01  Mathias Hasselmann  <mathias.hasselmann@gmx.de>
+
+	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:
+	  gtk_init_with_args.entries as array
+	* vapi/packages/pango/pango.metadata:
+	  mark PangoLogAttr as value type
+	* vapi/gtk+-2.0.vala, vapi/pango.vala:
+	  regenerated
+
 2007-09-01  Jürg Billeter  <j@bitron.ch>
 
 	* vala/valaclass.vala, vala/valadatatype.vala, vala/valainterface.vala,
